config/k8s/infra/reference-grant.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: ReferenceGrant
metadata:
  name: ckw-reference-grant
  namespace: apps
spec:
  from:
    - group: "gateway.networking.k8s.io"
      kind: HTTPRoute
      namespace: infra
  to:
    - group: ""
      kind: Service
      name: api-gateway
